# asx-object

./: CMakeLists.txt
include/asx-node/: Node.h  NodeAbstract.h  NodeGroup.h  VisitorAbstract.h  VisitorSerialize.h
include/asx-object/: Bytes.h  Object.h  String.h  TypeInfo.h  TypeTraits.h
src/: CMakeLists.txt  Node.cpp  NodeGroup.cpp  Object.cpp  String.cpp  VisitorSerialize.cpp
test/: Bytes.test.cpp  CMakeLists.txt  Node.test.cpp  NodeGroup.test.cpp  Object.test.cpp  String.test.cpp  TypeInfo.test.cpp  TypeTraits.test.cpp
